--- a/.github/workflows/run_test 1.yml
+++ b/.github/workflows/run_test 1.yml
@@ -52,15 +52,15 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
         dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
-        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1_2"
-        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files_2"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files_2"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
@@ -115,15 +115,15 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
         dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
-        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1_2"
-        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files_2"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files_2"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
@@ -182,15 +182,15 @@ jobs:
         dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
         dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
-        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1_2"
-        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files_2"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files_2"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
