--- a/.github/workflows/run_test 1.yml
+++ b/.github/workflows/run_test 1.yml
@@ -59,8 +59,8 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1_2"
-        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
@@ -122,8 +122,8 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1_2"
-        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
@@ -189,8 +189,8 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1_2"
-        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files"
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
