--- a/.github/workflows/run_test 1.yml
+++ b/.github/workflows/run_test 1.yml
@@ -170,6 +170,24 @@ jobs:
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Default:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTable" "jjga_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTable" "jjga_events"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbItemsTableDissolvable" "jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:DynamoDbEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Default:S3BucketName" "jjga-files"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+        dotnet user-secrets set "Sekiban:Secondary:AwsAccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbRegion" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTable" "jjga_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTable" "jjga_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbItemsTableDissolvable" "jjga_d_items_2"
+        dotnet user-secrets set "Sekiban:Secondary:DynamoDbEventsTableDissolvable" "jjga_d_events_2"
+        dotnet user-secrets set "Sekiban:Secondary:S3Region" "ap-northeast-1"
+        dotnet user-secrets set "Sekiban:Secondary:S3BucketName" "jjga-files"
     - name: Secret Settings Dynamo
       run: |
         pushd ./test/Sekiban.Test.Dynamo
