--- a/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
+++ b/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.102.38" />
       <PackageReference Include="AWSSDK.S3" Version="3.7.104.16" />
+      <PackageReference Include="SharpZipLib" Version="1.4.2" />
     </ItemGroup>
 
     <ItemGroup>
