--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -20,10 +20,11 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: |
+        pushd ./
         dotnet restore Sekiban.sln --configuration Release
     - name: Build with dotnet
       run: |
-        pushd ./src
+        pushd ./
         dotnet build Sekiban.sln --configuration Release
     - name: Pack Core
       run: |
