--- a/samples/FeatureCheck.WebApi.Dynamo/FeatureCheck.WebApi.Dynamo.csproj
+++ b/samples/FeatureCheck.WebApi.Dynamo/FeatureCheck.WebApi.Dynamo.csproj
@@ -13,8 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Sekiban.Addon.Web\Sekiban.Addon.Web.csproj" />
       <ProjectReference Include="..\..\src\Sekiban.Infrastructure.Dynamo\Sekiban.Infrastructure.Dynamo.csproj" />
+      <ProjectReference Include="..\..\src\Sekiban.Web\Sekiban.Web.csproj" />
       <ProjectReference Include="..\FeatureCheck.Domain\FeatureCheck.Domain.csproj" />
     </ItemGroup>
 
