Test merge duplicates. Add Base class more functionality

--- a/test/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
+++ b/test/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
@@ -42,6 +42,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\samples\FeatureCheck.Domain\FeatureCheck.Domain.csproj" />
+        <ProjectReference Include="..\..\samples\MultiTenant.Domain\MultiTenant.Domain.csproj" />
         <ProjectReference Include="..\..\samples\SampleProject.Common\SampleProject.Common.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Infrastructure.Cosmos\Sekiban.Infrastructure.Cosmos.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Infrastructure.Dynamo\Sekiban.Infrastructure.Dynamo.csproj" />
