--- a/test/FeatureCheck.Test/FeatureCheck.Test.csproj
+++ b/test/FeatureCheck.Test/FeatureCheck.Test.csproj
@@ -5,7 +5,9 @@
 
         <IsPackable>false</IsPackable>
 
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFrameworks>net7.0;net6.0;net8.0</TargetFrameworks>
+
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
