--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
