--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.x
+        dotnet-version: 8.0.100-preview.6.23330.14
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
