--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.x
+        dotnet-version: 8.0.100-preview.6.23330.14
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -79,7 +79,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.x
+        dotnet-version: 8.0.100-preview.6.23330.14
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -141,7 +141,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.x
+        dotnet-version: 8.0.100-preview.6.23330.14
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
