--- a/samples/FeatureCheck.Domain/FeatureCheck.Domain.csproj
+++ b/samples/FeatureCheck.Domain/FeatureCheck.Domain.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
         <LangVersion>11</LangVersion>
     </PropertyGroup>
 
