--- a/test/FeatureCheck.Test/FeatureCheck.Test.csproj
+++ b/test/FeatureCheck.Test/FeatureCheck.Test.csproj
@@ -5,13 +5,13 @@
 
         <IsPackable>false</IsPackable>
 
-        <TargetFrameworks>net7.0;net6.0;net8.0</TargetFrameworks>
+        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
 
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
         <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
