--- a/test/Mixed.Test/Mixed.Test.csproj
+++ b/test/Mixed.Test/Mixed.Test.csproj
@@ -23,8 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\samples\Mixed.Domain\Mixed.Domain.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Testing\Sekiban.Testing.csproj" />
-        <ProjectReference Include="..\Mixed.Domain\Mixed.Domain.csproj" />
     </ItemGroup>
 
 </Project>
