--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -60,7 +60,7 @@ jobs:
         dotnet restore Sekiban.sln
     - name: Test dotnet
       run: |
-        dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v n -c Release -m:1
+        dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1
     - uses: mktcode/consecutive-workflow-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -118,7 +118,7 @@ jobs:
         timeout_seconds: 300
         max_attempts: 3
         retry_on: error
-        command: dotnet test Sekiban.sln  --filter "Category=Flaky" -v n -c Release -m:1
+        command: dotnet test Sekiban.sln  --filter "Category=Flaky" -v m -c Release -m:1
     - uses: mktcode/consecutive-workflow-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -172,4 +172,4 @@ jobs:
         dotnet restore Sekiban.sln
     - name: Test dotnet
       run: |
-        dotnet test Sekiban.sln  --filter "Category=Performance" -v n -c Release -m:1
+        dotnet test Sekiban.sln  --filter "Category=Performance" -v m -c Release -m:1
