updated events converter

--- a/tools/Convert011To012/appsettings.json
+++ b/tools/Convert011To012/appsettings.json
@@ -25,7 +25,8 @@
       "CosmosDbAuthorizationKey": "[Set your cosmos db key here]",
       "CosmosDbDatabase": "[Set your cosmos db database here]",
       "CosmosDbContainer": "items",
-      "CosmosDbContainerDissolvable": "dissolvableitems"
+      "CosmosDbContainerDissolvable": "dissolvableitems",
+      "LegacyPartitions": true
     },
     "MemoryCache": {
       "SingleProjection": {
