--- a/src/Sekiban.Testing/Sekiban.Testing.csproj
+++ b/src/Sekiban.Testing/Sekiban.Testing.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Testing</PackageId>
-        <Version>0.13.6</Version>
+        <Version>0.14.0</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Testing</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.13.6</PackageVersion>
-        <Description>Add pdb symbols</Description>
+        <PackageVersion>0.14.0</PackageVersion>
+        <Description>Default Constructor not necesary.</Description>
         <AssemblyName>Sekiban.Testing</AssemblyName>
         <RootNamespace>Sekiban.Testing</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -20,12 +20,12 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
-        <PackageReference Include="xunit.assert" Version="2.5.0" />
-        <PackageReference Include="xunit.extensibility.core" Version="2.5.0" />
-        <None Include="..\..\README.md" Pack="true" PackagePath="\" />
-        <PackageReference Include="xunit.extensibility.execution" Version="2.5.0" />
+        <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0"/>
+        <PackageReference Include="xunit.assert" Version="2.5.0"/>
+        <PackageReference Include="xunit.extensibility.core" Version="2.5.0"/>
+        <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+        <PackageReference Include="xunit.extensibility.execution" Version="2.5.0"/>
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
@@ -37,6 +37,6 @@
         </None>
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj" />
+        <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj"/>
     </ItemGroup>
 </Project>
