Update Test Settings

--- a/test/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
+++ b/test/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
@@ -56,4 +56,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Stories\QueryPerformances\"/>
+    </ItemGroup>
+
 </Project>
