--- a/samples/FeatureCheck.WebApi.Dynamo/appsettings.json
+++ b/samples/FeatureCheck.WebApi.Dynamo/appsettings.json
@@ -14,8 +14,8 @@
       "DynamoDbEventsTable": "jjlt_events",
       "DynamoDbItemsTableDissolvable": "jjlt_d_items",
       "DynamoDbEventsTableDissolvable": "jjlt_d_events",
-      "S3BucketName": "jjlt-files",
-      "S3Region": "ap-northeast-1",
+      "S3BucketName": "jjlt-s3",
+      "S3Region": "us-west-1",
       "Aggregates": {
         "UseHybridDefault": true,
         "TakeSnapshotDefault": true,
@@ -35,5 +35,5 @@
       }
     }
   },
-    "AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
