--- a/GetStarted/BookBorrowing.Domain.Test/BookBorrowing.Domain.Test.csproj
+++ b/GetStarted/BookBorrowing.Domain.Test/BookBorrowing.Domain.Test.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
@@ -10,9 +10,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
-        <PackageReference Include="Sekiban.Testing" Version="0.14.2"/>
-        <PackageReference Include="xunit" Version="2.5.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+        <PackageReference Include="Sekiban.Testing" Version="0.14.2" />
+        <PackageReference Include="xunit" Version="2.5.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\BookBorrowing.Domain\BookBorrowing.Domain.csproj"/>
+        <ProjectReference Include="..\BookBorrowing.Domain\BookBorrowing.Domain.csproj" />
     </ItemGroup>
 
 </Project>
