Basic of how to write sekiban projects

--- a/docs/docfx_project/articles/toc.yml
+++ b/docs/docfx_project/articles/toc.yml
@@ -13,3 +13,5 @@
       href: prepare-cosmos-db-azure.md
   - name: Test it out with Dynamo DB
     href: test-out-dynamo.md
+- name: Sekiban Event Sourcing Basics
+  href: sekiban-event-sourcing-basics.md
