improving document and read model updator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "azureFunctions.projectSubpath": "src\\Sekiban.Testing"
+    "azureFunctions.projectSubpath": "src\\Sekiban.Testing",
+    "cSpell.words": [
+        "Stöckl"
+    ]
 }
