--- a/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/SekibanEventSourcingBasics.Cosmos.Web.csproj
+++ b/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/SekibanEventSourcingBasics.Cosmos.Web.csproj
@@ -8,7 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
+    <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.14.5" />
+    <PackageReference Include="Sekiban.Web" Version="0.14.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SekibanEventSourcingBasics.Domain\SekibanEventSourcingBasics.Domain.csproj" />
   </ItemGroup>
 
 </Project>
