--- a/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/appsettings.Development.json
+++ b/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Sekiban": {
+    "Default": {
+      "AggregateEventCosmosDbContainer": "events",
+      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
+      "BlobConnectionString": "[Set your blob connection string here. (not necessary for just running the sample)]",
+      "CosmosDbEndPointUrl": "[Set your CosmosDb endpoint url here.]",
+      "CosmosDbAuthorizationKey": "[Set your CosmosDb authorization key here.]",
+      "CosmosDbDatabase": "SekibanBasics",
+      "CosmosDbContainer": "items",
+      "CosmosDbContainerDissolvable": "dissolvableitems"
+    }
   }
 }
