--- a/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Testing/SekibanEventSourcingBasics.Testing.csproj
+++ b/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Testing/SekibanEventSourcingBasics.Testing.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
@@ -10,8 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-        <PackageReference Include="Sekiban.Testing" Version="0.14.4" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+        <PackageReference Include="Sekiban.Testing" Version="0.14.5" />
         <PackageReference Include="xunit" Version="2.5.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\BookBorrowing.Domain\BookBorrowing.Domain.csproj" />
+      <ProjectReference Include="..\SekibanEventSourcingBasics.Domain\SekibanEventSourcingBasics.Domain.csproj" />
     </ItemGroup>
 
 </Project>
