working on japanese document

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "azureFunctions.projectSubpath": "src\\Sekiban.Testing",
     "cSpell.words": [
+        "appsettings",
         "Stöckl"
     ]
 }
