--- a/docs/docfx_project/toc.yml
+++ b/docs/docfx_project/toc.yml
@@ -1,5 +1,7 @@
 - name: Articles
   href: articles/
+- name: Articles(ja)
+  href: articles_ja/
 - name: Api Documentation
   href: api/
   homepage: api/index.md
